# Jyamithika_CMake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindGLFW3.cmake  FindGLM.cmake
example/: BSPVisualization.cpp  ConstructingConvexhull_2d_simulation.cpp  Convexhull3dSimulation.cpp  KDTree2DSimulation.cpp  PolygonTriangulationSimulation.cpp  QuadTreeVisualization.cpp  SimpleVoronoi2dSimulation.cpp
include/GraphicUtils/: Camera.cpp  Camera.h  GraphicUtils.h  ShaderProgram.h  VertexArray.h  VertexBuffer.h
include/GraphicUtils/Geometry/: GFace.h  GLine.h
include/Jyamithika/: BinarySpacePartition.h  Convexhull.cpp  Convexhull.h  MonotonePartition.h  Triangulation.cpp  Triangulation.h  Voronoi.cpp  Voronoi.h
include/Jyamithika/Core/: Angle.h  Distance.h  GeoUtils.h  Inclusion.h  Intersection.cpp  Intersection.h
include/glad/: glad.h
resources/Shaders/: triangle2d.shader
src/: glad.c
